# basler-rgbd-driver

./: README.md
basler_bridge/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
basler_bridge/cfg/: basler_rgb_bridge.cfg  basler_tof_bridge.cfg
basler_bridge/data/: calib_color.yaml
basler_bridge/data/22052090/: calib_color.yaml  calib_color_resolution.yaml  settings.pfs
basler_bridge/data/22099567/: calib_color.yaml  settings.pfs
basler_bridge/data/22100546/: calib_ir.yaml  calib_world.yaml  settings.pfs
basler_bridge/data/22218136/: calib_ir.yaml  calib_ir_resolution.yaml  calib_world.yaml  settings.pfs
basler_bridge/data/22410499/: calib_color.yaml  calib_world.yaml
basler_bridge/include/: BaslerRGB.h  BaslerTOF.h
basler_bridge/launch/: basler_bridge.launch  basler_bridge_compressrgb.launch
basler_bridge/scripts/: robot_calib_auto.py  robot_calib_lib.py  robot_calib_static.py
basler_bridge/src/: basler_rgb_bridge.cpp  basler_tof_bridge.cpp
camera_msgs/: CMakeLists.txt  package.xml
camera_msgs/srv/: Calibrate.srv  ControlSwitch.srv  ExtrinsicsCalibrateSignal.srv  ExtrinsicsCalibrateStart.srv  Trigger.srv
cloud_generator/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cloud_generator/cfg/: cloud_generator.cfg
cloud_generator/src/: cloud_edge_kernel.cl  cloud_generator.cpp  cloud_kernel.cl  gaussian_kernel.cl  hyst_kernel.cl  non_max_supp_kernel.cl  sobel_kernel.cl
cmake/modules/: FindBasler.cmake  FindCURLpp.cmake  FindLibXML++.cmake  FindUSB4718.cmake
depth_registration/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
depth_registration/cfg/: depth_registration.cfg
depth_registration/launch/: depth_registration.launch
depth_registration/registration/: depth_registration_cpu.h  depth_registration_opencl.cpp  depth_registration_opencl.h  kinect2_registration.cpp
depth_registration/src/: depth_registration.cpp
od_compressed_image_transport/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
od_compressed_image_transport/cfg/: CompressedPublisher.cfg  CompressedSubscriber.cfg  compressed_publisher.cfg  compressed_subscriber.cfg
od_compressed_image_transport/launch/: od_compressed_image_transport.launch
od_compressed_image_transport/src/: compressed_publisher.cpp  compressed_subscriber.cpp  republisher.cpp
params_lib/: CMakeLists.txt  package.xml
params_lib/include/: CameraData.h  ExtrinsicCalibration.h  ParamsFunctions.h
params_lib/src/: CameraData.cpp  ExtrinsicCalibration.cpp
