<?xml version="1.0"?>
<package>
  <name>params_lib</name>
  <version>0.0.0</version>
  <description>The params_lib package</description>
  <maintainer email="raaj@todo.todo">raaj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export></export>
</package>
